<resources>
    <string name="app_name">JacFilter</string>
    <string name="opacity_selection">Choose the opacity:</string>
    <string name="enable_opacity_text">Enable opacity</string>
    <string name="channel_name">JacFilter channel</string>
    <string name="channel_description">JacFilter channel to post notifications to</string>
    <string name="notification_title">JacFilter</string>
    <string name="notification_message">Filter is running, click to disable</string>
    <string name="permission_denial_text">Please, allow the application to create an overlay</string>
    <string name="request_permission_title_text">Permission request</string>
    <string name="request_permission_content_text">
        This application create a overlay over the whole device\'s screen and allow to reduce it\'s
        luminosity.\n
        To do so you must allow this application to create this overlay in permissions.
    </string>
    <string name="request_permission_button_text">Request permission</string>
    <string name="request_permission_fragment_label">Request permission</string>
    <string name="filter_settings_fragment_label">Filter settings</string>
</resources>