<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opacity_selection_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opacity_selection"
        android:layout_marginVertical="@dimen/main_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_text_view" />

    <TextView
        android:id="@+id/opacity_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/main_margin"
        app:layout_constraintLeft_toRightOf="@id/opacity_selection_text_view"
        app:layout_constraintTop_toBottomOf="@id/app_name_text_view"
        tools:text="60" />

    <SeekBar
        android:id="@+id/opacity_selection_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/main_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opacity_selection_text_view" />

    <ToggleButton
        android:id="@+id/enable_opacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_opacity_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opacity_selection_seek_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>